--- a/templates/chatgpt/index.html
+++ b/templates/chatgpt/index.html
@@ -149,6 +149,8 @@
 </div>
 <script>
     $(document).ready(function () {
+
+        $('#chat-input').focus();
     // 添加一个scrollToBottom函数，用于滚动到底部
     function scrollToBottom() {
         $('.chat-window').scrollTop($('.chat-window')[0].scrollHeight);
