--- a/templates/chatgpt/index.html
+++ b/templates/chatgpt/index.html
@@ -16,7 +16,7 @@
             {% if user.is_authenticated %}
 
                 <li class="nav-item">
-                    <a class="nav-link" href="logout">Logout</a>
+                    <a class="nav-link" href="/chat/logout">Logout</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Welcome, {{ user.username }}</a>
@@ -25,7 +25,7 @@
             {% else %}
 
                 <li class="nav-item">
-                    <a class="nav-link" href="accounts/login">Login</a>
+                    <a class="nav-link" href="/chat/accounts/login">Login</a>
                 </li>
 
             {% endif %}
