--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -48,7 +48,7 @@
             {% endif %}
             <button class="btn btn-primary" type="submit">Register</button>
         </form>
-        <p class="text-center">If you already have an account, <a href="accounts/login">login</a> instead.</p>
+        <p class="text-center">If you already have an account, <a href="/chat/accounts/login">login</a> instead.</p>
     </div>
 
     {% if messages %}
