--- a/templates/chatgpt/index.html
+++ b/templates/chatgpt/index.html
@@ -153,9 +153,9 @@
         <div id="message-container">
             {% for content in conversation %}
                 {% if content.role == 'user' %}
-                    <div class="chat-message sent"><p>{{ content.content }}</p></div>
+                    <div class="chat-message sent"><p>{{ content.content | safe }}</p></div>
                 {% elif content.role == 'assistant' %}
-                    <div class="chat-message received"><p>{{ content.content }}</p></div>
+                    <div class="chat-message received"><p>{{ content.content | linebreaks }}</p></div>
                 {% endif %}
             {% endfor %}
         </div>
