--- a/templates/chatgpt/index.html
+++ b/templates/chatgpt/index.html
@@ -103,7 +103,12 @@
         }
 
         .sent {
-            background-color: #d5e7fc;
+            background-color: #d5e7fc;font-family: "Font Awesome 5 Free";font-weight: 900;
+        }
+
+
+        .sent p {
+            background-color: #d5e7fc;font-family: "Font Awesome 5 Free";font-weight: 900;margin-top: 0.5rem; margin-bottom: 0.5rem;
         }
 
         .received {
