--- a/templates/chatgpt/index.html
+++ b/templates/chatgpt/index.html
@@ -36,8 +36,10 @@
 <head>
     <title>Chat</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="icon" href="apple-touch-icon.png">
+  <link rel="shortcut icon" href="apple-touch-icon.png">
     <style>
         .container {
             margin: 50px auto;
@@ -118,14 +120,12 @@
         .sent {
             background-color: #d5e7fc;
             font-family: "Font Awesome 5 Free";
-            font-weight: 900;
         }
 
 
         .sent p {
             background-color: #d5e7fc;
             font-family: "Font Awesome 5 Free";
-            font-weight: 900;
             margin-top: 0.5rem;
             margin-bottom: 0.5rem;
         }
@@ -185,9 +185,7 @@
             border-bottom: 1px solid #ccc; /* 设置底部边框 */
         }
     </style>
-    <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    </head>
 <body>
 <div class="container">
     <div class="chat-window-title">Chat with ChatGPT</div>
